# ymir

./: .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  app.py  main.py  pyproject.toml
.github/workflows/: release.yml
templates/: changelog.md.j2
ymir/: app.py  fastapi_app.py
ymir/annotation/: review_queue.py
ymir/api/: __init__.py  annotation.py  conversion.py  datasets.py  export.py  functions.py  generation.py  shared.py
ymir/converters/: apigen_converter.py  hermes_converter.py
ymir/core/: __init__.py  constants.py  schemas.py
ymir/data/: .gitignore  __init__.py  database.py  dataset_store.py  session_store.py  store.py
ymir/data/converters/: __init__.py  base_converter.py  output_formatter.py
ymir/functions/: __init__.py  registry.py  schemas.py
ymir/functions/templates/: __init__.py  scheduling.py
ymir/generators/: __init__.py  observation_simulator.py  trajectory_generator.py  user_simulator.py
ymir/llm/: __init__.py  deepseek_llm.py  get_llm.py  google_llm.py  invoke.py  ollama_llm.py  openai_llm.py
ymir/pipeline/: __init__.py  generator.py  observation_simulator.py  personas.py  user_simulator.py
ymir/pipeline/annotation/: __init__.py  quality_scorer.py  review_queue.py
ymir/pipeline/llm/: __init__.py  ollama.py
ymir/prompt/: __init__.py  config.py  pdf.py  prompt_creation.py
ymir/rlhf/: __init__.py  rlhf.py
ymir/routes/: __init__.py  annotation.py  batch_processing.py  conversion.py  datasets_processing.py  document_processing.py  export.py  functions.py  generation.py  rlhf_processing.py  shared.py  triplet_processing.py
ymir/static/css/: styles.css
ymir/static/css/themes/: _base.css  default.css  survey-corps.css
ymir/static/js/: app.js  dev-reload.js  tailwind-config.js  theme-manager.js
ymir/storage/: __init__.py  trajectory_store.py
ymir/templates/: _full_page.html  batch.html  batch_error.html  batch_results.html  datasets.html  document_error.html  document_pdf_info.html  document_processing_results.html  document_processor.html  document_toc_results.html  index.html  rlhf_chat.html  rlhf_content.html  rlhf_table.html  triplet.html  triplet_extraction_results.html  triplet_table.html
ymir/templates/annotation/: index.html  queue_empty.html  review_result.html  stats_bar.html  trajectory_card.html  trajectory_detail.html  trajectory_row.html  trajectory_table.html
ymir/templates/components/: button.html  error.html  upload_button.html
ymir/templates/conversion/: import_result.html  index.html  stats.html
ymir/templates/document_processing/: document_processor.html
ymir/templates/export/: export_result.html  index.html
ymir/templates/functions/: function_list.html  index.html  scenario_tools_compact.html
ymir/templates/generation/: index.html  scenario_details.html  scenario_info.html  trajectory_preview.html
ymir/templates/generation/wizard/: step_actor.html  step_generate.html  step_scenario.html  step_tools.html  stepper.html
ymir/templates/rlhf_processing/: rlhf_content.html  rlhf_table.html
ymir/templates/triplet_processing/: triplet.html  triplet_extraction_results.html
ymir/triplets/: text_to_triplets.py
