[project]
name = "ymir"
version = "0.0.0a0"
description = "Ymir is a synthetic data generation tool for LLMs."
authors = [
    { name = "kodalli", email = "surya.kodali@gmail.com" },
    { name = "LAMICS, Inc." },
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "Apache 2" }
dependencies = [
    "langchain>=0.3.18,<0.4.0",
    "langchain-ollama>=0.2.3,<0.3.0",
    "langchain-openai>=0.3.5,<0.4.0",
    "langchain-google-genai>=2.0.9,<3.0.0",
    "langchain-deepseek>=0.1.2,<0.2.0",
    "fastapi>=0.110.0,<0.111.0",
    "jinja2>=3.1.3,<3.2.0",
    "uvicorn>=0.29.0,<0.30.0",
    "python-multipart>=0.0.9,<0.1.0",
    "loguru>=0.7.3,<0.8.0",
    "datasets>=3.2.0,<4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6,<0.10",
    "pre-commit>=4.1.0,<5",
    "python-semantic-release>=9.19.1,<10",
    "ipykernel>=6.29.5,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ymir"]

[tool.semantic_release]
version_source = "pep621"
branch = "master"
upload_to_pypi = false
changelog = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
major_on_zero = false
tag_format = "v{version}"
prerelease = true
prerelease_token = "alpha"
