[project]
name = "ymir"
version = "0.0.0a0"
description = "Ymir - Agentic Dataset Generator for LLM training"
authors = [
    { name = "kodalli", email = "surya.kodali@gmail.com" },
    { name = "LAMICS, Inc." },
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "Apache 2" }
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "ollama>=0.4.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6,<0.10",
    "pre-commit>=4.1.0,<5",
    "python-semantic-release>=9.19.1,<10",
    "ipykernel>=6.29.5,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ymir"]

[tool.semantic_release]
version_source = "pep621"
branch = "master"
upload_to_pypi = false
build_command = "pip install build && python -m build"
dist_path = "dist/"
major_on_zero = false
tag_format = "v{version}"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
mode = "init"

[tool.semantic_release.changelog.environment]
trim_blocks = true
lstrip_blocks = true
keep_trailing_newline = true
extensions = []
